devops/kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arx-bank-server-deploy
  namespace: arx-bank
  labels:
    app: arx-bank-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arx-bank-server
  template:
    metadata:
      labels:
        app: arx-bank-server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: arx-bank-server
          image: ghcr.io/stuck-in-a-loop/arx-bank-server:main-5c43c2c-22012025053738
          resources: {}
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: arx-bank-server-pvc
              mountPath: /shared/image_data
      volumes:
        - name: arx-bank-server-pvc
          persistentVolumeClaim:
            claimName: arx-bank-server-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arx-bank-server-worker-deploy
  namespace: arx-bank
  labels:
    app: arx-bank-server-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arx-bank-server-worker
  template:
    metadata:
      labels:
        app: arx-bank-server-worker
    spec:
      automountServiceAccountToken: false
      containers:
        - name: arx-bank-server
          image: ghcr.io/stuck-in-a-loop/arx-bank-server:main-5c43c2c-22012025053738
          command:
            [
              "celery",
              "--workdir",
              "src",
              "-A",
              "arx_bank_server.tasks",
              "worker",
              "--loglevel=debug",
            ]
          resources: {}
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: arx-bank-server-pvc
              mountPath: /shared/image_data
      volumes:
        - name: arx-bank-server-pvc
          persistentVolumeClaim:
            claimName: arx-bank-server-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: arx-bank-server-svc
  namespace: arx-bank
  labels:
    app: arx-bank-server
spec:
  selector:
    app: arx-bank-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: arx-bank-server-vs
  namespace: istio-services
spec:
  hosts:
    - arx-bank.stuckinaloop.ro
  gateways:
    - stuckinaloop-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: arx-bank-server-svc.arx-bank.svc.cluster.local
            port:
              number: 8000
